客家政策放入圖表

--- a/policies/_layout.html.slim
+++ b/policies/_layout.html.slim
@@ -31,9 +31,11 @@ html lang="zh-TW"
     = javascript_include_tag \
       "/vendor/d3.min.js", \
       "/vendor/prelude-browser-min.js", \
+      "/vendor/colorbrewer.v1.min.js", \
       "barchart", \
       "linechart", \
       "dountchart", \
+      "force", \
       "chartdata"
 
     = render "/layout_livereload"
