--- a/policies/hakka-policy.html.slim
+++ b/policies/hakka-policy.html.slim
@@ -42,7 +42,7 @@
   .section-class.scroll-spy-section#section-2 data-spy-index="2"
     span.animation.fade-in 困境
 
-  .section.image-theme style="background-image: url('/images/policies_image/housing_policy/reason_bg.jpg')"
+  .section.image-theme style="background-image: url('/images/policies_image/hakka_policy/reason_bg.jpg')"
     .center-content
       .text-content
         h3.section-title 客家文化困境
@@ -56,6 +56,17 @@
         li.animation.fade-in
           h4.section-sub-title 認同問題
           p 針對都會客家族群的隱形化，成長於非客庄地區客家族群的第二代或第三代，母語受教權並未獲得重視，受到成長環境影響所形成的記憶與認同改變問題，目前的客家施政也無相對應政策。
+
+          .figure
+            h4.section-sub-title 有一半的客家子女不會說客家話
+            .hakka-speak-chart
+            p.text-center 資料來源：<a href="http://www.hakka.gov.tw/np.asp?ctNode=1893" target="_blank">客委會 客語使用情況調查</a>，<a href="http://www.hakka.gov.tw/ct.asp?xItem=43944&amp;ctNode=1894&amp;mp=1&amp;ps=" target="_blank"> 客委會 全國客家人口基礎資料調查研究</a>
+
+          .figure
+            h4.section-sub-title 76% 的客家人有意願讓子女學習客語
+            .hakka-learn-chart
+            p.text-center 資料來源：<a href="http://www.hakka.gov.tw/np.asp?ctNode=1893" target="_blank">客委會 客語使用情況調查</a>
+
         li.animation.fade-in
           h4.section-sub-title 預算分配
           p 馬政府開出「客委會預算倍增」的支票，但其施政著重嘉年華式的活動舉辦，甚至有用於置入性行銷與綁樁之嫌。相較之下，需長期、制度性資源挹注的文化基礎工程，諸如：客家族群相關普查、語言資料庫建置、客家老建築測繪調查、學術研究補助、語言教學推廣等，反而未受重視。
@@ -77,15 +88,16 @@
     .center-content
         .text-content
           h3.section-title 政策目標
-        ol.text-content.order-list
-          li.animation.fade-in
-            p 以堅毅、勤儉的「客家精神」治國，公平且善用國家資源，帶領臺灣突破困境。
-          li.animation.fade-in
-            p 確保客家語言、文化的永續發展，重建母語普及的客家社區。
-          li.animation.fade-in
-            p 找回客家觀點的歷史詮釋權，建構屬於全民的客家歷史記憶。
-          li.animation.fade-in
-            p 以「文化加值」策略推動客家經濟，透過客家文藝復興的能量，讓生活、文化、生態、產業形成有機連結，創造腳踏實地的美好生活。
+        ol.text-content.order-list.multi-col-content
+          .multi-col-content-inner
+            li.col-2-content.animation.fade-in
+              p 確保客家語言、文化的永續發展，重建母語普及的客家社區。
+            li.col-2-content.animation.fade-in
+              p 找回客家觀點的歷史詮釋權，建構屬於全民的客家歷史記憶。
+            li.col-2-content.animation.fade-in
+              p 以堅毅、勤儉的「客家精神」治國，公平且善用國家資源，帶領臺灣突破困境。
+            li.col-2-content.animation.fade-in
+              p 以「文化加值」策略推動客家經濟，透過客家文藝復興的能量，讓生活、文化、生態、產業形成有機連結，創造腳踏實地的美好生活。
 
   .section-class.scroll-spy-section#section-4 data-spy-index="4"
     span.animation.fade-in 政策
@@ -100,7 +112,7 @@
             p 語言權為文化公民權，為尊重跨文化的表現形式， 我們主張立法明定本土各族群語言，包括原住民族語、客家話、Holo話、華語都是國家語言，一律平等，不因通行語的推行，而壓抑公民在生活中及官方場合使用族群母語的權利。
             p 而為了客家話的有效傳承，在客家地區，客語教學應從「語言教學」，逐步進階發展為「教學語言」，並結合家庭、社區及地方政府，推動友善客語生活環境計畫，重建母語普及的客家社區。在未來國家行政區域重劃時，應考慮到族群地域因素，保障族群語文的生存發展基地。
           li.animation.fade-in
-            h4.section-sub-title 重建多族群共享的<br>客家歷史文化，建構國家級客家知識體系
+            h4.section-sub-title 重建多族群共享的客家歷史文化，<br>建構國家級客家知識體系
             p 臺灣客家歷史與文化是我們國家歷史文化的重要組成，關於國家的紀念日、紀念物、紀念場所，及各種國家象徵、儀式、節慶，乃至國幣等之建立或製作，應有客家文化思維角度，使客家歷史與文化成為國民共享的記憶與光榮的一部份。
             p 基於重視建立知識體系的多元文化視角，本黨執政時期全力建立客家高等學術研究教育機構。未來進一步的工作，則是推動國家級客家在地知識與人文大型研究調查計畫，整合並擴大客家學術能量，深化本土人文知識基礎。此一計畫將是臺灣人文與社會科學的國家型研究調查計畫，帶領臺灣本土社會科學及人文研究突破瓶頸，脫離「學術殖民地」的當前學術文化。
           li.animation.fade-in
@@ -110,14 +122,11 @@
           li.animation.fade-in
             h4.section-sub-title 建構「伯公醫療行動網」，讓客庄不再有醫療偏鄉
             p 迎向高齡化挑戰，打造在地安養的幸福客庄，我們將建構「伯公醫療行動網」，打造「即時性」與「整合性」的醫療照護網絡，讓客庄不再有醫療偏鄉之憾。
-            h4.section-sub-title 守護客庄的「伯公醫療行動網」<br>包括三個層次的政策重點
+            p <strong>守護客庄的「伯公醫療行動網」包括三個層次的政策重點：</strong>
             ul.list
-              li.animation.fade-in
-                p 透過社區醫療的強化，提供民眾即時性、連續性的醫療服務，包括「巡迴醫療」、「社區即時諮詢」、「高齡者整合性照護」等；
-              li.animation.fade-in
-                p 協調地區性醫療院所，強化個別性發展重點，不僅能夠維持個別醫療專科適當經濟規模，也讓客庄民眾能獲得專業的處置；
-              li.animation.fade-in
-                p 連結專責醫學中心，賦與輔導與支援整體醫療行動網的功能與責任，強化從社區醫療到醫學中心的合作。
+              li.animation.fade-in 透過社區醫療的強化，提供民眾即時性、連續性的醫療服務，包括「巡迴醫療」、「社區即時諮詢」、「高齡者整合性照護」等；
+              li.animation.fade-in 協調地區性醫療院所，強化個別性發展重點，不僅能夠維持個別醫療專科適當經濟規模，也讓客庄民眾能獲得專業的處置；
+              li.animation.fade-in 連結專責醫學中心，賦與輔導與支援整體醫療行動網的功能與責任，強化從社區醫療到醫學中心的合作。
           li.animation.fade-in
             h4.section-sub-title 推動「夥房銀髮照顧中心」，在地安養與就業，活化客庄新夥房
             p 透過各地客庄的夥房與閒置空間，連結社區與民間能量，共同推動「夥房銀髮照顧中心」。這是整合健康促進、社區照護、在地就業、客家文化教育的小規模、多功能的「新夥房」，讓客庄老人在地安養，年輕世代融入客家文化，透過更緊密的代間連結，開展客家文化與教育的交流傳承。
@@ -126,56 +135,6 @@
             p 全球化的時代，固然對於臺灣的在地文化帶來挑戰，但是也提供了過去所沒有的發展契機。「多元而對話」、「多樣而交流」的族群語言、文化、歷史記憶，是我們重要的發展憑藉。在有客家族群居住的國家中，臺灣是唯一具備完整客家政策的國家，臺灣經驗可成為與各國經驗積極交流的基礎。
             p 為了貢獻全球文化多樣性，關懷及推動客家族群在各該居地國之公民參與、政治參與、在地認同，並形成跨國的客家文化交流與客家政策合作，讓客家語言文化成為各該國多元文化的重要資產，我們將積極邀請東南亞及中國等各客家族群重要居住國，共同推動成立「國際客家組織」Hakka International，秘書處設於臺灣，定期輪流於相關國家召開大會，讓臺灣成為「全球客家文化新都」，讓客家榮耀於臺灣、榮耀於世界，創造下一個客家的美好年代！
 
-  / .section.white-block
-  /   .center-content
-  /     .text-content
-  /       ul.todo-list
-  /         li.animation.fade-in
-  /           h4.section-sub-title 重建多族群共享的<br>客家歷史文化，建構國家級客家知識體系
-  /           p 臺灣客家歷史與文化是我們國家歷史文化的重要組成，關於國家的紀念日、紀念物、紀念場所，及各種國家象徵、儀式、節慶，乃至國幣等之建立或製作，應有客家文化思維角度，使客家歷史與文化成為國民共享的記憶與光榮的一部份。
-  /           p 基於重視建立知識體系的多元文化視角，本黨執政時期全力建立客家高等學術研究教育機構。未來進一步的工作，則是推動國家級客家在地知識與人文大型研究調查計畫，整合並擴大客家學術能量，深化本土人文知識基礎。此一計畫將是臺灣人文與社會科學的國家型研究調查計畫，帶領臺灣本土社會科學及人文研究突破瓶頸，脫離「學術殖民地」的當前學術文化。
-
-  / .section
-  /   .center-content
-  /     .text-content
-  /       ul.todo-list
-  /         li.animation.fade-in
-  /           h4.section-sub-title 建立完善的族群傳播體系，<br>讓客家豐富臺灣多元文化
-  /           p 客家電視應提升為客家公共廣播集團，在維持客家主體性前提下獨立運作。我們將合理規劃廣播頻譜，建立全國頻道的客家廣播電臺。以電臺、電視的結合，以及各地方頻道的策略聯盟為基礎，建構「客家公共廣播電視集團」。
-  /           p 再者，基於《聯合國文化藝術表現多樣性公約》的精神 ，更基於建立文化多元的臺灣，我們將推動廣電法修法，要求明訂公廣集團董事須有客家族群代表。而一般廣電頻道節目亦應基於臺灣社會族群文化的多樣性，在一般節目中適切表達客家及其他各族群語言文化，以建立跨族群的公共領域及藝文創造平臺。
-
-  / .section.white-block
-  /   .center-content
-  /     .text-content
-  /       ul.todo-list
-  /         li.animation.fade-in
-  /           h4.section-sub-title 建構「伯公醫療行動網」，讓客庄不再有醫療偏鄉
-  /           p 迎向高齡化挑戰，打造在地安養的幸福客庄，我們將建構「伯公醫療行動網」，打造「即時性」與「整合性」的醫療照護網絡，讓客庄不再有醫療偏鄉之憾。
-  /       h4.section-sub-title 守護客庄的「伯公醫療行動網」<br>包括三個層次的政策重點
-  /       ul.order-list
-  /         li.animation.fade-in
-  /           p 透過社區醫療的強化，提供民眾即時性、連續性的醫療服務，包括「巡迴醫療」、「社區即時諮詢」、「高齡者整合性照護」等；
-  /         li.animation.fade-in
-  /           p 協調地區性醫療院所，強化個別性發展重點，不僅能夠維持個別醫療專科適當經濟規模，也讓客庄民眾能獲得專業的處置；
-  /         li.animation.fade-in
-  /           p 連結專責醫學中心，賦與輔導與支援整體醫療行動網的功能與責任，強化從社區醫療到醫學中心的合作。
-
-  / .section
-  /   .center-content
-  /     .text-content
-  /       ul.todo-list
-  /         li.animation.fade-in
-  /           h4.section-sub-title 推動「夥房銀髮照顧中心」，在地安養與就業，活化客庄新夥房
-  /           p 透過各地客庄的夥房與閒置空間，連結社區與民間能量，共同推動「夥房銀髮照顧中心」。這是整合健康促進、社區照護、在地就業、客家文化教育的小規模、多功能的「新夥房」，讓客庄老人在地安養，年輕世代融入客家文化，透過更緊密的代間連結，開展客家文化與教育的交流傳承。
-
-  / .section.white-block
-  /   .center-content
-  /     .text-content
-  /       ul.todo-list
-  /         li.animation.fade-in
-  /           h4.section-sub-title 臺灣客家國際化，推動成立國際客家組織HI（Hakka International, NGO)
-  /           p 全球化的時代，固然對於臺灣的在地文化帶來挑戰，但是也提供了過去所沒有的發展契機。「多元而對話」、「多樣而交流」的族群語言、文化、歷史記憶，是我們重要的發展憑藉。在有客家族群居住的國家中，臺灣是唯一具備完整客家政策的國家，臺灣經驗可成為與各國經驗積極交流的基礎。
-  /           p 為了貢獻全球文化多樣性，關懷及推動客家族群在各該居地國之公民參與、政治參與、在地認同，並形成跨國的客家文化交流與客家政策合作，讓客家語言文化成為各該國多元文化的重要資產，我們將積極邀請東南亞及中國等各客家族群重要居住國，共同推動成立「國際客家組織」Hakka International，秘書處設於臺灣，定期輪流於相關國家召開大會，讓臺灣成為「全球客家文化新都」，讓客家榮耀於臺灣、榮耀於世界，創造下一個客家的美好年代！
 
   .section.white-block
     .center-content
@@ -183,18 +142,12 @@
         h3.section-title 浪漫台三線計畫
         p 省道台三線，經過許多山區的客家庄，這條美麗的綠色走廊，是台灣客家山林文化的原鄉，因為人口大量外流都市平地，孤寂的台三線成為遊子最後的鄉愁。蔡英文一直在思考，用什麼樣的方法，能讓我們的年輕人有回到客家庄的動能。
         img.image.animation.fade-in src="/images/policies_image/hakka_policy/hp_2.jpg"
-        ul.todo-list
-          li.animation.fade-in
-            h4.section-sub-title 計畫理念
-            p 在全球化轉型的脈絡下，當前客庄發展必須透過「文化」將觀光經濟定錨在每一個客家鄉鎮，而不僅僅依靠節慶活動刺激消費者進入鄉村。我們提出同時結合客庄產業經濟與文化地景保存的政策新思路，打造「國家級臺三線客庄浪漫大道」就是一個創新生活型態的國家重大建設方向。經具體實踐、發揮成效之後，此成功經驗也可推廣至花東的縱谷慢遊廊帶，或南部的「水水六堆」。
-            p 桃竹苗地區客家人口比例全國最高，其中又以臺三線保持最完整的客家文化。延續本黨執政時重現客家光榮的政策方向，我們主張沿臺三線，串連臺三線16個客家庄文化，從桃園平鎮、龍潭到臺中石岡，結合產業、文化與觀光打造一條具備歷史縱深的「浪漫大道」，讓臺三線成為客家文化邁向世界舞臺的最佳起點。
-        ul.todo-list
-          li.animation.fade-in
-            h4.section-sub-title 計畫區域
-            p 涵括從桃園平鎮、龍潭，經新竹縣關西、橫山、竹東、北埔、峨眉，苗栗縣頭份、三灣、南庄、獅潭、大湖、卓蘭，到台中東勢、石岡、新社等為蛋黃區，並以其他縣道、鄉道連接之周邊鄉鎮為蛋白區。
-        ul.todo-list
-          li.animation.fade-in
-            h4.section-sub-title 具體措施
+        h4.section-sub-title 計畫理念
+        p 在全球化轉型的脈絡下，當前客庄發展必須透過「文化」將觀光經濟定錨在每一個客家鄉鎮，而不僅僅依靠節慶活動刺激消費者進入鄉村。我們提出同時結合客庄產業經濟與文化地景保存的政策新思路，打造「國家級臺三線客庄浪漫大道」就是一個創新生活型態的國家重大建設方向。經具體實踐、發揮成效之後，此成功經驗也可推廣至花東的縱谷慢遊廊帶，或南部的「水水六堆」。
+        p 桃竹苗地區客家人口比例全國最高，其中又以臺三線保持最完整的客家文化。延續本黨執政時重現客家光榮的政策方向，我們主張沿臺三線，串連臺三線16個客家庄文化，從桃園平鎮、龍潭到臺中石岡，結合產業、文化與觀光打造一條具備歷史縱深的「浪漫大道」，讓臺三線成為客家文化邁向世界舞臺的最佳起點。
+        h4.section-sub-title 計畫區域
+        p 涵括從桃園平鎮、龍潭，經新竹縣關西、橫山、竹東、北埔、峨眉，苗栗縣頭份、三灣、南庄、獅潭、大湖、卓蘭，到台中東勢、石岡、新社等為蛋黃區，並以其他縣道、鄉道連接之周邊鄉鎮為蛋白區。
+        h4.section-sub-title 具體措施
         ol.order-list
           li.animation.fade-in
             h4.section-sub-title 建立「台三線客庄浪漫大道」區域治理平台
@@ -226,22 +179,23 @@
             p 在臺灣這塊山林土地上，刻劃了千百年臺灣多元族群的人文意象與美學形成，不論是客家人的茶園梯田、埤圳古道、夥房園林，還是原住民族的傳統領域聖地，都是珍貴的人文資產。我們將針對這些人文地景進行系統性調查研究，再加上地方知識的重新建構，逐步投入國家經費讓這些人文地景獲得妥善保存與恢復。
             p 例如：桃竹苗的茶園景觀、桃園臺地的埤塘文化及觀音藻礁保護區、鐵道文化的轉型活化（桃林鐵路、內灣線、舊山線等等)、菸樓建築（高雄美濃及花蓮鳳林) ，還有開拓山林的腦寮、筍寮、炭窯、古道等等憶古設施，都可藉由人文地景來詮釋歷史，建構屬於全民的客家歷史記憶。
 
-  .section.white-block
+  .section
     blockquote.bigtext.animation.slide-up: p 過去，很多客家庄的年輕人，順著台三線，離開家鄉，到大城市工作打拚。但是現在，我們要讓台三線變成一條回家的路
     .blockquote-name: span 蔡英文
+
+  .section.white-block
+    .center-content
+      .text-content
+        h3.section-title 水水六堆計畫
+        p 高屏六堆地區向以好水、好日頭、好食材著稱，「水水六堆」計畫將以客家釀造文化為基礎，展現客家與多元族群共生以及傳統智慧的活化、現代化。
+
 
   .section
     .center-content
       .text-content
-        h3.section-title 「水水六堆」計畫
-        p 高屏六堆地區向以好水、好日頭、好食材著稱，「水水六堆」計畫將以客家釀造文化為基礎，展現客家與多元族群共生以及傳統智慧的活化、現代化。
-        img.image.animation.fade-in src="/images/policies_image/hakka_policy/hp_3.jpg"
-
-  .section.white-block
-    .center-content
-      .text-content
-        h3.section-title 「花東縱谷慢遊廊帶」計畫
+        h3.section-title 花東縱谷慢遊廊帶計畫
         p 花東地區近年來致力於發展慢活、慢遊、慢食的深度旅遊方式，其中鳳林鎮更是全臺客庄唯一獲得「國際慢城聯盟」（Cittaslow International Network）認證的「國際慢城」。慢城運動強調在地文化、在地農產及傳統料理的保存，以發展在地產業、提高生活品質。
+        img.image.animation.fade-in src="/images/policies_image/hakka_policy/hp_3.jpg"
         p 目前獲認證加入「國際慢城聯盟」的城市共三十個國家，臺灣也是其中之一。花東縱谷渾然天成的優美地貌早已馳名國際，當地客庄也向以出產良質米著稱，我們計畫推動「花東縱谷慢遊廊帶」，鼓勵友善耕作、在地生產、在地食用、在地銷售，彰顯縮短食物里程與碳足跡的生態意義，更鼓勵多樣化的客家米食文化之保存與創新，結合貫串東部的鐵道或臺九線，發展一個又個客庄駐足「慢慢聊」的文化體驗慢遊，打造花東縱谷美麗而富裕的新客庄。
 
   .section-class.scroll-spy-section#section-5 data-spy-index="5"
@@ -251,15 +205,30 @@
     .center-content
       .text-content
         h3.section-title 不相信我們的<br>客家政策會成功嗎？
-        p 本黨自創黨以來，堅持民主、本土、多元的文化價值，從地方執政到中央執政，率先推動母語教育、教科書本土化，並建立個別族群的政策架構與行政體系。在客家施政政績上，我們成立了行政院客家委員會，設立客家電視臺，舉辦桐花祭帶動客庄休閒產業，掀起客家音樂、文化藝術熱潮。在教育與客家知識體系建構方面，我們創設客語認證體系、實施客語生活學校、客語生活鄉鎮計畫等等，為母語傳承奠定基礎，並成立三所客家學院，二十多所大學院校成立客家研究中心或系所，成立臺灣客家文化中心籌備處，並籌設六堆和北部客家文化園區。
+        p.animation.fade-in 本黨自創黨以來，堅持民主、本土、多元的文化價值，從地方執政到中央執政，率先推動母語教育、教科書本土化，並建立個別族群的政策架構與行政體系。在客家施政政績上，我們成立了行政院客家委員會，設立客家電視臺，舉辦桐花祭帶動客庄休閒產業，掀起客家音樂、文化藝術熱潮。在教育與客家知識體系建構方面，我們創設客語認證體系、實施客語生活學校、客語生活鄉鎮計畫等等，為母語傳承奠定基礎，並成立三所客家學院，二十多所大學院校成立客家研究中心或系所，成立臺灣客家文化中心籌備處，並籌設六堆和北部客家文化園區。
 
-        .figure
+        ul.text-content.timeline.animation
+          li.fade-in
+            span.time <strong>2001</strong>
+            .timeline-content: p 中華民國客家委員會成立
+          li.fade-in.delay-200ms
+            span.time <strong>2002</strong>
+            .timeline-content: p 客家桐花季開辦、台灣客家文化中心籌備處成立
+          li.fade-in.delay-400ms
+            span.time <strong>2003</strong>
+            .timeline-content: p 中央大學客家學院創立、客家電視台開台
+          li.fade-in.delay-600ms
+            span.time <strong>2004</strong>
+            .timeline-content: p 交通大學客家文化學院創立
+          li.fade-in.delay-800ms
+            span.time <strong>2006</strong>
+            .timeline-content: p 聯合大學客家學院創立
 
-        p 這些努力開創了客家文化回歸主流的新論述，確立了從一元到多元文化的新典範。歷史上的客家從未在政策上獲得如此積極的支持與待遇，因此有學者認為「民進黨執政的時代，是客家認同成長最多、最快的時代」。
+        p.animation.fade-in 這些努力開創了客家文化回歸主流的新論述，確立了從一元到多元文化的新典範。歷史上的客家從未在政策上獲得如此積極的支持與待遇，因此有學者認為「民進黨執政的時代，是客家認同成長最多、最快的時代」。
 
-        p 未來，重建母語普及的客家社區，是我們的重要目標。我們要繼續在家庭、社區、各級政府，推動客語生活環境計畫。而且要讓藝術和文創進入客庄，用客家傳統藝術重新活化客庄街區，再造客庄新生命。而台三線客家浪漫大道，將是台灣第一個結合文化、生態、產業及族群復興運動的大型政府計劃。新式、多元的發展機會，會讓年輕人回來客庄打拼。
+        p.animation.fade-in 未來，重建母語普及的客家社區，是我們的重要目標。我們要繼續在家庭、社區、各級政府，推動客語生活環境計畫。而且要讓藝術和文創進入客庄，用客家傳統藝術重新活化客庄街區，再造客庄新生命。而台三線客家浪漫大道，將是台灣第一個結合文化、生態、產業及族群復興運動的大型政府計劃。新式、多元的發展機會，會讓年輕人回來客庄打拼。
 
-        p 我們在此向大家保證，本黨重新執政後，一定會找回這份在馬政府執政時遭遇反挫的榮耀感，我們一定會努力創造下一個客家的美好年代！
+        p.animation.fade-in 我們在此向大家保證，本黨重新執政後，一定會找回這份在馬政府執政時遭遇反挫的榮耀感，我們一定會努力創造下一個客家的美好年代！
 
   .post
     .post-share
