--- a/sass/page/policies-page/_chartstyle.sass
+++ b/sass/page/policies-page/_chartstyle.sass
@@ -84,3 +84,8 @@
     stroke: white
     stroke-width: 1px
     shape-rendering: crispEdges
+
+.hakka-speak-chart, .hakka-learn-chart
+
+  text
+    font-size: 18px
