多國語系 lang 設定

--- a/global/_layout.html.slim
+++ b/global/_layout.html.slim
@@ -1,5 +1,5 @@
 doctype 5
-html.no-js lang="zh-TW"
+html.no-js lang="#{@language}"
   head
     = render "/layout_head"
     = render "/layout_siteinfo"
