更新中文的 logo

--- a/partial/_header.html.slim
+++ b/partial/_header.html.slim
@@ -1,7 +1,7 @@
 .header
   .header-inner
     - if !@language
-      .logo: a href="/" 點亮台灣 Light UP TAIWAN
+      .logo.logo_zh: a href="/" 點亮台灣 Light UP TAIWAN
     - elsif @language == "en"
       .logo.logo_en: a href="/" 點亮台灣 Light UP TAIWAN
     - elsif @language == "es"
