--- a/sass/partial/_header.scss
+++ b/sass/partial/_header.scss
@@ -15,9 +15,9 @@
     padding: 6px 0 6px 6px;
     a {
       display: block;
-      @include replace-text-with-svg(logo-zh);
     }
   }
+  .logo_zh a { @include replace-text-with-svg(logo-zh-mobile); }
   .logo_en a { @include replace-text-with-svg(logo-en); }
   .logo_es a { @include replace-text-with-svg(logo-es); }
   .logo_jp a { @include replace-text-with-svg(logo-jp); }
@@ -189,6 +189,10 @@
     .lang {
       display: none;
     }
+  }
+
+  @include at-breakpoint($pad) {
+    .logo_zh a { @include replace-text-with-svg(logo-zh); }
   }
 
   @include at-breakpoint($desktop) {
