--- a/partial/_hero.html.slim
+++ b/partial/_hero.html.slim
@@ -12,13 +12,13 @@
         a.hero-block.small style="background-image: url('/images/hero-2.jpg')" href="http://melody.iing.tw" target="_blank"
           .hero-block-title
             .hero-block-title-inner
-              h2.title 三隻小豬，點亮台灣
+              h2.title= zh_lorem_sentence
               p.description 這是一段文字敘述，可以寫大約50字左右，超過會沒辦法顯示
       .hero-block-wrap
         a.hero-block.small style="background-image: url('/images/hero-3.jpg')" href="http://donate.iing.tw" target="_blank"
           .hero-block-title
             .hero-block-title-inner
-              h2.title 小額捐款
+              h2.title= zh_lorem_sentence
               p.description 這是一段文字敘述
     .hero-block-wrap
       a.hero-block.medium style="background-image: url('/images/hero-video.jpg')" href="http://light.iing.tw" target="_blank" data-responsive-comment-media="(min-width: 1025px)"
