--- a/sass/setup/_base.scss
+++ b/sass/setup/_base.scss
@@ -24,13 +24,13 @@ $code-scroll-shadow-weight: .3;
 @include establish-baseline; // Establishes a font baseline for the given font-size.
 
 %avenir {
-  font-family: "AvenirNext-DemiBoldItalic", "Avenir-HeavyOblique", "Arial", "STHeitiTC-Light", sans-serif;
+  font-family: "AvenirNext-DemiBoldItalic", "Avenir-HeavyOblique", "Arial", sans-serif;
   font-weight: 300;
   font-style: normal;
 }
 
 %helvetica {
-    font-family: "Helvetica Neue", "Helvetica", "Arial", "STHeitiTC-Light","Microsoft JhengHei", sans-serif;
+    font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
