--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -130,7 +130,7 @@ td, th { padding: 0; }
 
 html { font-size: 16px; line-height: 24px; }
 
-body { font-family: "Helvetica Neue", "Helvetica", "Arial", "STHeitiTC-Light","Microsoft JhengHei", sans-serif; font-weight: 400; font-style: normal; }
+body { font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif; font-weight: 400; font-style: normal; }
 
 code { font-family: "Anonymous Pro", "Inconsolata", "Consolas Regular Font", "Monaco", "Courier New" ,MonoSpace; font-weight: 400; font-style: normal; }
 
@@ -445,11 +445,17 @@ body { background-color: #183840; position: relative; }
 @media (min-width: 1512px) { .back-to-top { margin-left: auto; -webkit-border-radius: 0 3px 3px 0; -moz-border-radius: 0 3px 3px 0; -ms-border-radius: 0 3px 3px 0; -o-border-radius: 0 3px 3px 0; border-radius: 0 3px 3px 0; } }
 
 .banner { position: relative; display: block; padding-top: 62.5%; overflow: hidden; background-color: #e1e1e1; background-image: -webkit-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: -moz-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: -o-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: linear-gradient(140deg, #e7e879 0%, #50b584 87%); }
+.banner.banner_has-text { background-color: #50B584; padding-top: 50%; }
+.banner.banner_has-text:before { content: ''; display: block; position: absolute; top: 0; right: 0; bottom: 0; left: 0; z-index: 10; background-image: url('/images/blur-ball-post-header.png?1445165237'); background-repeat: no-repeat; background-position: center bottom; -webkit-background-size: 175% 110%; -moz-background-size: 175% 110%; -o-background-size: 175% 110%; background-size: 175% 110%; }
+.banner .banner-img { position: absolute; top: 0; right: 0; bottom: 0; left: 0; background-position: center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+.banner .banner-title { position: absolute; left: 0; right: 0; bottom: 0; z-index: 20; width: 80%; margin: 0 auto; padding: 12px; text-align: center; font-size: 18px; line-height: 24px; font-weight: bold; color: white; }
 .banner img { position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: block; margin: 0 auto; }
-@media (min-width: 640px) { .banner { padding-top: 24%; } }
+@media (min-width: 640px) { .banner { padding-top: 24%; }
+  .banner.banner_has-text { padding-top: 35%; }
+  .banner .banner-title { padding: 18px 24px; font-size: 24px; line-height: 30px; } }
 
-.lazyload, .banner img, .post-list .post-image-inner, .post_bg-image-style .post-cover-image { opacity: 0; -webkit-transition: opacity 2s; -moz-transition: opacity 2s; -o-transition: opacity 2s; transition: opacity 2s; }
-.lazyload.lazyloaded, .banner img.lazyloaded, .post-list .lazyloaded.post-image-inner, .post_bg-image-style .lazyloaded.post-cover-image { opacity: 1; }
+.lazyload, .banner .banner-img, .banner img, .post-list .post-image-inner, .post_bg-image-style .post-cover-image { opacity: 0; -webkit-transition: opacity 2s; -moz-transition: opacity 2s; -o-transition: opacity 2s; transition: opacity 2s; }
+.lazyload.lazyloaded, .banner .lazyloaded.banner-img, .banner img.lazyloaded, .post-list .lazyloaded.post-image-inner, .post_bg-image-style .lazyloaded.post-cover-image { opacity: 1; }
 
 .dropdown { position: relative; }
 
@@ -475,7 +481,8 @@ body { background-color: #183840; position: relative; }
 .header .header-inner { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; max-width: 1512px; width: 100%; margin: 0 auto; background-color: white; border-bottom: 1px solid #ddd; }
 .header .header-inner:after { content: ""; display: table; clear: both; }
 .header .logo { float: left; padding: 6px 0 6px 6px; }
-.header .logo a { display: block; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-zh.png?1447050772'); background-repeat: no-repeat; background-position: 50% 50%; width: 240px; height: 48px; background-image: none, url('/images/logo-zh.svg?1447050772'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
+.header .logo a { display: block; }
+.header .logo_zh a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-zh-mobile.png?1450957647'); background-repeat: no-repeat; background-position: 50% 50%; width: 166px; height: 48px; background-image: none, url('/images/logo-zh-mobile.svg?1450957647'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
 .header .logo_en a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-en.png?1447050772'); background-repeat: no-repeat; background-position: 50% 50%; width: 240px; height: 48px; background-image: none, url('/images/logo-en.svg?1447050772'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
 .header .logo_es a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-es.png?1447050772'); background-repeat: no-repeat; background-position: 50% 50%; width: 240px; height: 48px; background-image: none, url('/images/logo-es.svg?1447050772'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
 .header .logo_jp a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-jp.png?1447050772'); background-repeat: no-repeat; background-position: 50% 50%; width: 240px; height: 48px; background-image: none, url('/images/logo-jp.svg?1447050772'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
@@ -514,6 +521,7 @@ body { background-color: #183840; position: relative; }
 .header .global-language { position: absolute; top: 0px; height: 60px; right: 48px; display: block; }
 .header .global-language-btn { color: #ccc; display: block; font-size: 24px; line-height: 24px; position: relative; margin: 14px 0 0; padding: 0; top: 1px; width: 32px; height: 32px; }
 .header .global-language-btn .lang { display: none; }
+@media (min-width: 640px) { .header .logo_zh a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-zh.png?1450953046'); background-repeat: no-repeat; background-position: 50% 50%; width: 309px; height: 48px; background-image: none, url('/images/logo-zh.svg?1450953046'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; } }
 @media (min-width: 1025px) { .header { position: fixed; left: 0; top: 0; right: 0; z-index: 350; margin: 0 auto; }
   .header .header-inner { position: relative; }
   .header .menu-btn { display: none; }
@@ -564,10 +572,7 @@ body { background-color: #183840; position: relative; }
 .hero:after { content: ""; display: table; clear: both; }
 .hero .hero-block-wrap { padding-bottom: 2px; }
 .hero .hero-wrap-right .hero-block-wrap { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; width: 100%; }
-.hero .hero-wrap-right > .hero-block-wrap { padding-bottom: 0; }
 .hero .hero-wrap-inner:after { content: ""; display: table; clear: both; }
-.hero .hero-wrap-inner .hero-block-wrap { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: left; width: 50%; padding-bottom: 2px; }
-.hero .hero-wrap-inner .hero-block-wrap + .hero-block-wrap { padding-left: 2px; }
 .hero .hero-block { overflow: hidden; position: relative; background-position: center center; background-repeat: no-repeat; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
 .hero .hero-block:before { content: ""; position: absolute; bottom: -120px; right: -120px; width: 290px; height: 290px; background: url("/images/blur-ball-small.png") no-repeat; opacity: .9; }
 .hero .hero-block.large { display: block; width: 100%; height: 400px; background-color: #dddddd; }
@@ -577,15 +582,18 @@ body { background-color: #183840; position: relative; }
 .hero .hero-block-title .hero-block-title-inner { position: relative; z-index: 100; }
 .hero .hero-block-title:before { content: ""; position: absolute; z-index: 1; bottom: -330px; left: -200px; width: 520px; height: 520px; background: url("/images/blur-ball-large.png") no-repeat; opacity: .9; }
 .hero .hero-block-title:after { content: ""; position: absolute; z-index: 2; bottom: -200px; left: 50px; width: 370px; height: 370px; background: url("/images/blur-ball-medium.png") no-repeat; opacity: .9; }
-.hero .hero-block-title .title { position: relative; margin-bottom: 0px; font-size: 24px; line-height: 32px; font-weight: bold; }
+.hero .hero-block-title .title { position: relative; margin-bottom: 0px; font-size: 22px; line-height: 28px; font-weight: bold; }
 .hero .hero-block-title .description { display: none; position: relative; margin-bottom: 0px; }
 .hero .video-bg { display: none; }
+@media (min-width: 640px) { .hero .hero-wrap-inner { height: 50%; }
+  .hero .hero-wrap-inner .hero-block-wrap { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: left; width: 50%; padding-bottom: 2px; }
+  .hero .hero-wrap-inner .hero-block-wrap + .hero-block-wrap { padding-left: 2px; } }
 @media (min-width: 700px) { .hero { height: 560px; }
   .hero .hero-block-wrap { height: 100%; padding-bottom: 0; }
   .hero .hero-wrap-left { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: left; width: 40%; height: 100%; }
   .hero .hero-wrap-right { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: right; width: 60%; height: 100%; }
   .hero .hero-wrap-right .hero-block-wrap, .hero .hero-wrap-right .hero-block-wrap + .hero-block-wrap { padding-left: 2px; }
-  .hero .hero-wrap-inner { height: 50%; }
+  .hero .hero-wrap-right > .hero-block-wrap { padding-bottom: 0; }
   .hero .hero-block:before { bottom: 0px; right: -160px; opacity: .5; -webkit-transition: opacity 1s; -moz-transition: opacity 1s; -o-transition: opacity 1s; transition: opacity 1s; }
   .hero .hero-block:after { content: ""; position: absolute; z-index: 10; top: auto; left: 50px; right: auto; bottom: -135px; width: 270px; height: 270px; opacity: 1; background: url("/images/blur-ball-hover.png") no-repeat; -webkit-transition: opacity 1s, -webkit-transform 1s; -webkit-transition-delay: 0.5s, 0s; -moz-transition: opacity 1s 0.5s, -moz-transform 1s; -o-transition: opacity 1s 0.5s, -o-transform 1s; transition: opacity 1s 0.5s, transform 1s; }
   .hero .hero-block.small { height: 100%; }
@@ -594,14 +602,14 @@ body { background-color: #183840; position: relative; }
   .hero .hero-block-title { max-width: 360px; padding: 18px; }
   .hero .hero-block-title:before { z-index: 1; bottom: -250px; left: -250px; opacity: .7; }
   .hero .hero-block-title:after { z-index: 2; bottom: -200px; left: 50px; opacity: .7; }
-  .hero .hero-block-title .title { z-index: 10; margin-bottom: 6px; font-size: 24px; line-height: 32px; }
+  .hero .hero-block-title .title { z-index: 10; }
   .hero .hero-block-title .description { z-index: 10; overflow: hidden; font-size: 15px; line-height: 24px; font-weight: bold; } }
 @media (min-width: 1025px) { .hero { max-width: 1512px; max-height: 900px; min-height: 480px; height: calc(100vh - 60px ); padding-top: 0; }
   .hero .hero-block-title { padding: 0; }
   .hero .hero-block-title .hero-block-title-inner { padding: 24px; position: relative; z-index: 100; }
   .hero .hero-block-title:before { bottom: -280px; left: -220px; -webkit-transition: opacity 1s, -webkit-transform 5s; -moz-transition: opacity 1s, -moz-transform 5s; -o-transition: opacity 1s, -o-transform 5s; transition: opacity 1s, transform 5s; }
   .hero .hero-block-title:after { bottom: -200px; left: 70px; -webkit-transition: opacity 1s, -webkit-transform 1s; -moz-transition: opacity 1s, -moz-transform 1s; -o-transition: opacity 1s, -o-transform 1s; transition: opacity 1s, transform 1s; }
-  .hero .hero-block-title .title { position: relative; bottom: -72px; font-size: 28px; line-height: 36px; -webkit-transition: bottom 0.5s; -moz-transition: bottom 0.5s; -o-transition: bottom 0.5s; transition: bottom 0.5s; }
+  .hero .hero-block-title .title { position: relative; bottom: -72px; font-size: 24px; line-height: 30px; margin-bottom: 6px; -webkit-transition: bottom 0.5s; -moz-transition: bottom 0.5s; -o-transition: bottom 0.5s; transition: bottom 0.5s; }
   .hero .hero-block-title .description { display: block; position: relative; bottom: -72px; height: 72px; opacity: 0; -webkit-transition: opacity 0.5s, bottom 0.5s; -moz-transition: opacity 0.5s, bottom 0.5s; -o-transition: opacity 0.5s, bottom 0.5s; transition: opacity 0.5s, bottom 0.5s; }
   .hero .hero-block:hover:before { opacity: .95; }
   .hero .hero-block:hover:after { opacity: 0; -webkit-transform: scale(5, 5); -moz-transform: scale(5, 5); -ms-transform: scale(5, 5); -o-transform: scale(5, 5); transform: scale(5, 5); }
@@ -610,7 +618,10 @@ body { background-color: #183840; position: relative; }
   .hero .hero-block:hover .hero-block-title:after { opacity: .95; -webkit-transform: scale(1.8, 1.8); -moz-transform: scale(1.8, 1.8); -ms-transform: scale(1.8, 1.8); -o-transform: scale(1.8, 1.8); transform: scale(1.8, 1.8); }
   .hero .hero-block:hover .hero-block-title .title { bottom: 0; }
   .hero .hero-block:hover .hero-block-title .description { bottom: 0; opacity: 1; }
+  .hero .hero-block.no-description:hover .hero-block-title .title { bottom: -72px; }
+  .hero .hero-block.no-description:hover .hero-block-title .description { bottom: -72px; opacity: 1; }
   .hero .video-bg { display: block; position: absolute; top: 50%; left: 50%; min-width: 100%; min-height: 100%; width: auto; height: auto; background-color: black; -webkit-transform: translateX(-50%) translateY(-50%); transform: translateX(-50%) translateY(-50%); } }
+@media (min-width: 1440px) { .hero .hero-block-title .title { font-size: 28px; line-height: 36px; } }
 
 .post-list .post-list-title { margin: 36px 0; font-size: 24px; line-height: 30px; color: black; text-align: center; }
 .post-list .post-image { position: relative; display: block; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; background-position: center center; background-repeat: no-repeat; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; margin: 0 -24px 12px; width: auto; padding-top: 67%; background-color: #e1e1e1; background-image: -webkit-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: -moz-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: -o-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: linear-gradient(140deg, #e7e879 0%, #50b584 87%); }
@@ -711,7 +722,7 @@ body { background-color: #183840; position: relative; }
 .footer { position: relative; padding: 72px 0 360px; background-color: #183840; color: #ddd; text-align: center; overflow: hidden; background-image: radial-gradient(circle at 85% 85%, #2b6f69 5%, #183840 40%); }
 .footer:after { content: ""; display: table; clear: both; }
 .footer:before { content: ''; position: absolute; left: -50%; bottom: 0; height: 0; opacity: 0.25; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/footer/footer-vi.png?1445165238'); background-repeat: no-repeat; background-position: 50% 50%; width: 500px; height: 500px; background-image: none, url('/images/footer/footer-vi.svg?1445165238'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
-.footer .footer-logo { position: absolute; right: 24px; bottom: 72px; z-index: 50; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/footer/footer-title.png?1445165238'); background-repeat: no-repeat; background-position: 50% 50%; width: 180px; height: 150px; background-image: none, url('/images/footer/footer-title.svg?1445165238'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
+.footer .footer-logo { position: absolute; right: 24px; bottom: 72px; z-index: 50; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/footer/footer-title.png?1450951724'); background-repeat: no-repeat; background-position: 50% 50%; width: 180px; height: 150px; background-image: none, url('/images/footer/footer-title.svg?1450951724'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
 .footer .copy { position: absolute; right: 24px; bottom: 24px; text-align: right; font-size: 11px; line-height: 1.1; }
 .footer .site-list { margin: 0 auto; padding: 0 24px; max-width: 240px; position: relative; z-index: 50; }
 .footer .site { display: block; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; margin-bottom: 48px; }
@@ -777,7 +788,7 @@ body { background-color: #183840; position: relative; }
   .page-bottom-illustrator:before, .page-bottom-illustrator:after { padding-bottom: 20%; margin-bottom: 10%; } }
 
 .post:after { content: ""; display: table; clear: both; }
-.post .post-header { text-align: center; margin-bottom: 24px; }
+.post .post-header { display: block; text-align: center; margin-bottom: 24px; }
 .post .post-cover { display: block; margin: 0 -24px 12px; }
 .post .post-cover img { margin: 0 auto; display: block; }
 .post .post-category { margin: 0; padding: 0; border: 0; list-style: none; }
@@ -1315,11 +1326,12 @@ body { background-color: #183840; position: relative; }
 .global-page .header .menu-btn { display: none; }
 .global-page .header .global-language { right: 6px; }
 .global-page .copy { text-align: center; font-size: 13px; line-height: 24px; padding-bottom: 48px; }
-.global-page .post-list { padding-top: 12px; }
-@media (min-width: 480px) { .global-page .post-list { padding-top: 0px; } }
-@media (min-width: 848px) { .global-page .post-list { padding-top: 24px; } }
+.global-page .banner { margin: 24px auto 12px; }
+@media (min-width: 480px) { .global-page .banner { margin: 24px auto 0; } }
+@media (min-width: 640px) { .global-page .banner { margin: 24px auto 0; } }
 @media (min-width: 1025px) { .global-page .header .logo { padding: 6px 0; left: 50%; -webkit-transform: translateX(-50%); -moz-transform: translateX(-50%); -ms-transform: translateX(-50%); -o-transform: translateX(-50%); transform: translateX(-50%); }
   .global-page .header .global-language { right: 0px; }
+  .global-page .banner { margin: 48px auto 24px; }
   .global-page .page-bottom-illustrator { padding-top: 0; padding-bottom: 20%; margin-bottom: 24px; }
   .global-page .page-bottom-illustrator:before, .global-page .page-bottom-illustrator:after { margin-bottom: 0%; } }
 
