更改觀光政策的資料來源 link

--- a/policies/tourism-policy.html.slim
+++ b/policies/tourism-policy.html.slim
@@ -47,7 +47,7 @@
             .col-2-content
               img.image.animation.fade-in src="/images/policies_image/tourism_policy/tp_2.png"
 
-        p.text-center 資料來源：<a href="http://www.lonelyplanet.com/travel-tips-and-articles/76856" target="_blank">Lonely Planet</a>，<a href="http://www.appledaily.com.tw/realtimenews/article/new/20150615/629372/" target="_blank">蘋果即時新聞</a>
+        p.text-center 資料來源：<a href="http://www.lonelyplanet.com/travel-tips-and-articles/76856" target="_blank">Lonely Planet</a>，<a href="http://edition.cnn.com/2015/06/14/travel/world-best-food-culinary-journeys/" target="_blank">CNN</a>
 
         p 根據世界觀光旅遊委員會預測，台灣到2025年觀光生產總額將達到1兆2千億新台幣，可以創造83.3萬個就業機會。UNWTO也預測，未來十年，亞洲地區觀光客將成長102%，推估台灣觀光客將在2025年突破2千萬人。而每位觀光客對經濟的貢獻度是10個居民的消費力，台灣的觀光潛力極大。
 
