--- a/policies/hakka-policy.html.slim
+++ b/policies/hakka-policy.html.slim
@@ -6,11 +6,10 @@
 .content.has-sub-menu
   .scroll-spy-menu
     ul.scroll-spy-menu-inner
-      li.scroll-spy-menu-item: a href="#section-1" 主張
-      li.scroll-spy-menu-item: a href="#section-2" 困境
-      li.scroll-spy-menu-item: a href="#section-3" 目標
-      li.scroll-spy-menu-item: a href="#section-4" 政策
-      li.scroll-spy-menu-item: a href="#section-5" 總結
+      li.scroll-spy-menu-item: a href="#section-1" 困境
+      li.scroll-spy-menu-item: a href="#section-2" 目標
+      li.scroll-spy-menu-item: a href="#section-3" 政策
+      li.scroll-spy-menu-item: a href="#section-4" 總結
   .policy-header style="background-image: url('/images/policies_image/hakka_policy/page_header_bg.jpg')"
     .header-title
       .header-title-inner
@@ -31,15 +30,12 @@
     blockquote: p 每一個文化都是台灣的文化。讓每一個人學會自己的母語，讓每一個人找回土地、記憶跟認同，建立尊嚴，這是一個國家最重要的責任。讓客家文化和其他的文化一樣都能夠永續發展跟傳承，這樣我們才真正地是一個多元平等的國家。
     .blockquote-name: span 蔡英文
 
-  .section-class.scroll-spy-section#section-1 data-spy-index="1"
-    span.animation.fade-in 主張
-
-  .section
+  .section.white-block
     .center-content
       .text-content
         p 臺灣是多族群國家，族群課題反映了臺灣歷史的複雜和多樣性，只要能夠在個別族群的資源支持和發展之外，建構多元族群的友善互動空間，確保各族群的平等與共存共榮，那麼這種共同參與主流建構的族群關係，其多樣化、豐富性、永續發展，就會是全民共享的珍貴資產。
 
-  .section-class.scroll-spy-section#section-2 data-spy-index="2"
+  .section-class.scroll-spy-section#section-1 data-spy-index="1"
     span.animation.fade-in 困境
 
   .section.image-theme style="background-image: url('/images/policies_image/hakka_policy/reason_bg.jpg')"
@@ -58,12 +54,12 @@
           p 針對都會客家族群的隱形化，成長於非客庄地區客家族群的第二代或第三代，母語受教權並未獲得重視，受到成長環境影響所形成的記憶與認同改變問題，目前的客家施政也無相對應政策。
 
           .figure
-            h4.section-sub-title 有一半的客家子女不會說客家話
+            h4.section-sub-title.text-center 有一半的客家子女不會說客家話
             .hakka-speak-chart
             p.text-center 資料來源：<a href="http://www.hakka.gov.tw/np.asp?ctNode=1893" target="_blank">客委會 客語使用情況調查</a>，<a href="http://www.hakka.gov.tw/ct.asp?xItem=43944&amp;ctNode=1894&amp;mp=1&amp;ps=" target="_blank"> 客委會 全國客家人口基礎資料調查研究</a>
 
           .figure
-            h4.section-sub-title 76% 的客家人有意願讓子女學習客語
+            h4.section-sub-title.text-center 76% 的客家人有意願讓子女學習客語
             .hakka-learn-chart
             p.text-center 資料來源：<a href="http://www.hakka.gov.tw/np.asp?ctNode=1893" target="_blank">客委會 客語使用情況調查</a>
 
@@ -77,7 +73,7 @@
         p 有鑒於此，我們主張以「族群關係政策」來重新定位客家政策，在此定位中，客家族群具有既是相對多數，也是相對少數，可以擔起既是反省者、也是參與者的重要角色。
 
 
-  .section-class.scroll-spy-section#section-3 data-spy-index="3"
+  .section-class.scroll-spy-section#section-2 data-spy-index="2"
     span.animation.fade-in 目標
 
   .section
@@ -88,18 +84,17 @@
     .center-content
         .text-content
           h3.section-title 政策目標
-        ol.text-content.order-list.multi-col-content
-          .multi-col-content-inner
-            li.col-2-content.animation.fade-in
-              p 確保客家語言、文化的永續發展，重建母語普及的客家社區。
-            li.col-2-content.animation.fade-in
-              p 找回客家觀點的歷史詮釋權，建構屬於全民的客家歷史記憶。
-            li.col-2-content.animation.fade-in
-              p 以堅毅、勤儉的「客家精神」治國，公平且善用國家資源，帶領臺灣突破困境。
-            li.col-2-content.animation.fade-in
-              p 以「文化加值」策略推動客家經濟，透過客家文藝復興的能量，讓生活、文化、生態、產業形成有機連結，創造腳踏實地的美好生活。
+        ol.text-content.order-list
+          li.animation.fade-in
+            h4.section-sub-title 確保客家語言、文化的永續發展，重建母語普及的客家社區。
+          li.animation.fade-in
+            h4.section-sub-title 找回客家觀點的歷史詮釋權，建構屬於全民的客家歷史記憶。
+          li.animation.fade-in
+            h4.section-sub-title 以堅毅、勤儉的「客家精神」治國，公平且善用國家資源，帶領臺灣突破困境。
+          li.animation.fade-in
+            h4.section-sub-title 以「文化加值」策略推動客家經濟，透過客家文藝復興的能量，讓生活、文化、生態、產業形成有機連結，創造腳踏實地的美好生活。
 
-  .section-class.scroll-spy-section#section-4 data-spy-index="4"
+  .section-class.scroll-spy-section#section-3 data-spy-index="3"
     span.animation.fade-in 政策
 
   .section
@@ -142,11 +137,14 @@
         h3.section-title 浪漫台三線計畫
         p 省道台三線，經過許多山區的客家庄，這條美麗的綠色走廊，是台灣客家山林文化的原鄉，因為人口大量外流都市平地，孤寂的台三線成為遊子最後的鄉愁。蔡英文一直在思考，用什麼樣的方法，能讓我們的年輕人有回到客家庄的動能。
         img.image.animation.fade-in src="/images/policies_image/hakka_policy/hp_2.jpg"
+      .text-content
         h4.section-sub-title 計畫理念
         p 在全球化轉型的脈絡下，當前客庄發展必須透過「文化」將觀光經濟定錨在每一個客家鄉鎮，而不僅僅依靠節慶活動刺激消費者進入鄉村。我們提出同時結合客庄產業經濟與文化地景保存的政策新思路，打造「國家級臺三線客庄浪漫大道」就是一個創新生活型態的國家重大建設方向。經具體實踐、發揮成效之後，此成功經驗也可推廣至花東的縱谷慢遊廊帶，或南部的「水水六堆」。
         p 桃竹苗地區客家人口比例全國最高，其中又以臺三線保持最完整的客家文化。延續本黨執政時重現客家光榮的政策方向，我們主張沿臺三線，串連臺三線16個客家庄文化，從桃園平鎮、龍潭到臺中石岡，結合產業、文化與觀光打造一條具備歷史縱深的「浪漫大道」，讓臺三線成為客家文化邁向世界舞臺的最佳起點。
+      .text-content
         h4.section-sub-title 計畫區域
         p 涵括從桃園平鎮、龍潭，經新竹縣關西、橫山、竹東、北埔、峨眉，苗栗縣頭份、三灣、南庄、獅潭、大湖、卓蘭，到台中東勢、石岡、新社等為蛋黃區，並以其他縣道、鄉道連接之周邊鄉鎮為蛋白區。
+      .text-content
         h4.section-sub-title 具體措施
         ol.order-list
           li.animation.fade-in
@@ -180,7 +178,7 @@
             p 例如：桃竹苗的茶園景觀、桃園臺地的埤塘文化及觀音藻礁保護區、鐵道文化的轉型活化（桃林鐵路、內灣線、舊山線等等)、菸樓建築（高雄美濃及花蓮鳳林) ，還有開拓山林的腦寮、筍寮、炭窯、古道等等憶古設施，都可藉由人文地景來詮釋歷史，建構屬於全民的客家歷史記憶。
 
   .section
-    blockquote.bigtext.animation.slide-up: p 過去，很多客家庄的年輕人，順著台三線，離開家鄉，到大城市工作打拚。但是現在，我們要讓台三線變成一條回家的路
+    blockquote.animation.slide-up: p 過去，很多客家庄的年輕人，順著台三線，離開家鄉，到大城市工作打拚。但是現在，我們要讓台三線變成一條回家的路
     .blockquote-name: span 蔡英文
 
   .section.white-block
@@ -198,30 +196,36 @@
         img.image.animation.fade-in src="/images/policies_image/hakka_policy/hp_3.jpg"
         p 目前獲認證加入「國際慢城聯盟」的城市共三十個國家，臺灣也是其中之一。花東縱谷渾然天成的優美地貌早已馳名國際，當地客庄也向以出產良質米著稱，我們計畫推動「花東縱谷慢遊廊帶」，鼓勵友善耕作、在地生產、在地食用、在地銷售，彰顯縮短食物里程與碳足跡的生態意義，更鼓勵多樣化的客家米食文化之保存與創新，結合貫串東部的鐵道或臺九線，發展一個又個客庄駐足「慢慢聊」的文化體驗慢遊，打造花東縱谷美麗而富裕的新客庄。
 
-  .section-class.scroll-spy-section#section-5 data-spy-index="5"
+  .section-class.scroll-spy-section#section-4 data-spy-index="4"
     span.animation.fade-in 總結
 
   .section
     .center-content
       .text-content
-        h3.section-title 不相信我們的<br>客家政策會成功嗎？
+        h3.section-title 創造下一個客家的美好年代
+        h4.section-sub-title 客家妹挺客家人
         p.animation.fade-in 本黨自創黨以來，堅持民主、本土、多元的文化價值，從地方執政到中央執政，率先推動母語教育、教科書本土化，並建立個別族群的政策架構與行政體系。在客家施政政績上，我們成立了行政院客家委員會，設立客家電視臺，舉辦桐花祭帶動客庄休閒產業，掀起客家音樂、文化藝術熱潮。在教育與客家知識體系建構方面，我們創設客語認證體系、實施客語生活學校、客語生活鄉鎮計畫等等，為母語傳承奠定基礎，並成立三所客家學院，二十多所大學院校成立客家研究中心或系所，成立臺灣客家文化中心籌備處，並籌設六堆和北部客家文化園區。
 
         ul.text-content.timeline.animation
           li.fade-in
             span.time <strong>2001</strong>
+            span.dot-dark
             .timeline-content: p 中華民國客家委員會成立
           li.fade-in.delay-200ms
             span.time <strong>2002</strong>
+            span.dot-dark
             .timeline-content: p 客家桐花季開辦、台灣客家文化中心籌備處成立
           li.fade-in.delay-400ms
             span.time <strong>2003</strong>
+            span.dot-dark
             .timeline-content: p 中央大學客家學院創立、客家電視台開台
           li.fade-in.delay-600ms
             span.time <strong>2004</strong>
+            span.dot-dark
             .timeline-content: p 交通大學客家文化學院創立
           li.fade-in.delay-800ms
             span.time <strong>2006</strong>
+            span.dot-dark
             .timeline-content: p 聯合大學客家學院創立
 
         p.animation.fade-in 這些努力開創了客家文化回歸主流的新論述，確立了從一元到多元文化的新典範。歷史上的客家從未在政策上獲得如此積極的支持與待遇，因此有學者認為「民進黨執政的時代，是客家認同成長最多、最快的時代」。
