調整客家政策圖表

--- a/policies/hakka-policy.html.slim
+++ b/policies/hakka-policy.html.slim
@@ -54,12 +54,12 @@
           p 針對都會客家族群的隱形化，成長於非客庄地區客家族群的第二代或第三代，母語受教權並未獲得重視，受到成長環境影響所形成的記憶與認同改變問題，目前的客家施政也無相對應政策。
 
           .figure
-            h4.section-sub-title.text-center 有一半的客家子女不會說客家話
+            h4.section-sub-title.text-center 客家人的下一代
             .hakka-speak-chart
             p.text-center 資料來源：<a href="http://www.hakka.gov.tw/np.asp?ctNode=1893" target="_blank">客委會 客語使用情況調查</a>，<a href="http://www.hakka.gov.tw/ct.asp?xItem=43944&amp;ctNode=1894&amp;mp=1&amp;ps=" target="_blank"> 客委會 全國客家人口基礎資料調查研究</a>
 
           .figure
-            h4.section-sub-title.text-center 76% 的客家人有意願讓子女學習客語
+            h4.section-sub-title.text-center 客家人客語使用狀況
             .hakka-learn-chart
             p.text-center 資料來源：<a href="http://www.hakka.gov.tw/np.asp?ctNode=1893" target="_blank">客委會 客語使用情況調查</a>
 
