政策頁 page-header 新增 preload 狀態

--- a/policies/food-safely.html.slim
+++ b/policies/food-safely.html.slim
@@ -10,7 +10,8 @@
       li.scroll-spy-menu-item: a href="#section-2" 原因
       li.scroll-spy-menu-item: a href="#section-3" 政策
       li.scroll-spy-menu-item: a href="#section-4" 總結
-  .policy-header style="background-image: url('/images/policies_image/food_safely/page_header_bg.jpg')"
+  .policy-header
+    .policy-header-cover.lazyload style="background-image: url('/images/policies_image/food_safely/page_header_bg.jpg')"
     .header-title
       .header-title-inner
         ul.policy-category: li: a href="http://iing.tw/categories/政策" 政策
