--- a/policies/physical-culture.html.slim
+++ b/policies/physical-culture.html.slim
@@ -9,7 +9,8 @@
       li.scroll-spy-menu-item: a href="#section-1" 主張
       li.scroll-spy-menu-item: a href="#section-2" 現況
       li.scroll-spy-menu-item: a href="#section-3" 政策
-  .policy-header style="background-image: url('/images/policies_image/physical_culture/page_header_bg.jpg')"
+  .policy-header
+    .policy-header-cover.lazyload style="background-image: url('/images/policies_image/physical_culture/page_header_bg.jpg')"
     .header-title
       .header-title-inner
         ul.policy-category: li: a href="http://iing.tw/categories/政策" 政策
