--- a/policies/disability-equity.html.slim
+++ b/policies/disability-equity.html.slim
@@ -11,7 +11,8 @@
       li.scroll-spy-menu-item: a href="#section-3" 目標
       li.scroll-spy-menu-item: a href="#section-4" 主張
       li.scroll-spy-menu-item: a href="#section-5" 附錄
-  .policy-header style="background-image: url('/images/policies_image/disability_equity/page_header_bg.jpg')"
+  .policy-header
+    .policy-header-cover.lazyload style="background-image: url('/images/policies_image/disability_equity/page_header_bg.jpg')"
     .header-title
       .header-title-inner
         ul.policy-category: li: a href="http://iing.tw/categories/政策" 政策
