--- a/policies/housing-policy.html.slim
+++ b/policies/housing-policy.html.slim
@@ -9,7 +9,8 @@
       li.scroll-spy-menu-item: a href="#section-1" 現狀
       li.scroll-spy-menu-item: a href="#section-2" 政策
       li.scroll-spy-menu-item: a href="#section-3" 總結
-  .policy-header style="background-image: url('/images/policies_image/housing_policy/page_header_bg.jpg')"
+  .policy-header
+    .policy-header-cover.lazyload style="background-image: url('/images/policies_image/housing_policy/page_header_bg.jpg')"
     .header-title
       .header-title-inner
         ul.policy-category: li: a href="http://iing.tw/categories/政策" 政策
