--- a/policies/index.html.slim
+++ b/policies/index.html.slim
@@ -4,43 +4,106 @@
 = render '/partial/sub-menu'
 
 .content.has-sub-menu
-// 兩欄 //
+
+  .section-top
+    .section-inner
+      .section-content
+        .section-content-col2
+          .col
+            .title.text-center 蔡英文
+          .col
+            .title.text-center 陳建仁
+
   .section
     .section-inner
       .section-header
-        h3.headline
-    .section-content
-      .section-content-col2
-        .col
-          figure
-          p.title
-          p
-        .col
-          figure
-          p.title
-          p
-// 單欄 //
+        h3.headline 外觀
+      .section-content
+        .section-content-col2
+          .col
+            figure.no-margin
+              img src="http://www.shoreinvestmentgroup.com/wp-content/uploads/2014/07/user-icon-silhouette.png"
+              .title.text-center <strong>蔡英文</strong>
+              p.text-center 大家好我是小英
+          .col
+            figure.no-margin
+              img src="http://www.shoreinvestmentgroup.com/wp-content/uploads/2014/07/user-icon-silhouette.png"
+              .title.text-center <strong>陳建仁</strong>
+              p.text-center 大家好我是大仁哥
+
+        .section-content-col1
+          .col
+            .title <strong>共同標題：</strong>
+            p 共同欄位跨兩欄跨兩欄，共同欄位跨兩欄跨兩欄共同欄位跨兩欄跨兩欄！共同欄位跨兩欄跨兩欄。
+
   .section
     .section-inner
       .section-header
-        h3.headline
+        h3.headline 外觀描述
+      .section-content
+        .section-content-col2
+          .col
+            p 這個描述適用 br 換行的這個是用 br 換行的<br>描述一下兩排描述一下兩排
+          .col
+            p 描述一下兩排這個用p
+            p 描述一下兩排
+
+  .section
+    .section-inner
+      .section-header
+        h3.headline 兩欄標題內文
+      .section-content
+        .section-content-col2
+          .col.topic
+            .title.no-margin <strong>這個是標題</strong>
+          .col.copy
+            p 第一排內文<br>第二排內文<br>第三排內文
+
+        .section-content-col2
+          .col.topic
+            .title.no-margin <strong>這個是標題</strong>
+          .col.copy
+            p 第一排內文第一排內文第一排內文<br>第二排內文<br>第三排內文第三排內文<br>第四排內文第四排內文<br>第五排內文
+
+
+  .section
+    .section-inner
+      .section-header
+        h3.headline 內裝
       .section-content
         .section-content-col1
           .col
-            p
-// 三欄 //
+            p 自動對焦，採用 Focus Pixels
+            p 光學影像穩定功能 (僅限 iPhone 6s Plus)
+            p True Tone 閃光燈
+            p 全景模式 (高達 6,300 萬像素)
+            p 照片自動 HDR
+            p 曝光控制
+            p 連拍模式
+            p 計時模式
+            p ƒ/2.2 光圈
+
   .section
     .section-inner
       .section-header
-        h3.headline
+        h3.headline 功能
       .section-content
         .section-content-col1
           .col
-            p.title
+            .title.no-margin <strong>很多個的列表</strong>
         .section-content-col3
           .col
             ul
+              li 第一個
+              li 第二個
+              li 第三個
           .col
             ul
+              li 第四個
+              li 第五個
+              li 第六個
           .col
             ul
+              li 第七個
+              li 第八個
+              li 第九個
