--- a/sass/all.scss
+++ b/sass/all.scss
@@ -50,6 +50,7 @@
 
 // ==== page ====
 @import "page/homepage";
+@import "page/policies";
 @import "page/policies-page";
 @import "page/article-page";
 @import "page/global-page";
