--- a/sass/partial/_header.scss
+++ b/sass/partial/_header.scss
@@ -18,9 +18,9 @@
     }
   }
   .logo_zh a { @include replace-text-with-svg(logo-zh-mobile); }
-  .logo_en a { @include replace-text-with-svg(logo-en); }
-  .logo_es a { @include replace-text-with-svg(logo-es); }
-  .logo_jp a { @include replace-text-with-svg(logo-jp); }
+  .logo_en a { @include replace-text-with-svg(logo-en-mobile); }
+  .logo_es a { @include replace-text-with-svg(logo-es-mobile); }
+  .logo_jp a { @include replace-text-with-svg(logo-jp-mobile); }
 
   .menu-btn {
     position: absolute;
@@ -193,6 +193,9 @@
 
   @include at-breakpoint($pad) {
     .logo_zh a { @include replace-text-with-svg(logo-zh); }
+    .logo_en a { @include replace-text-with-svg(logo-en); }
+    .logo_es a { @include replace-text-with-svg(logo-es); }
+    .logo_jp a { @include replace-text-with-svg(logo-jp); }
   }
 
   @include at-breakpoint($desktop) {
