--- a/partial/_footer.html.slim
+++ b/partial/_footer.html.slim
@@ -3,7 +3,7 @@
     .site-list
       a.site href="http://donate.iing.tw"
         .site-logo.site-logo_donate
-        .site-meta.site-title 蔡英文競選小額募款
+        .site-meta.site-title 蔡英文、陳建仁競選小額募款
         .site-meta.site-subtitle donate.iing.tw
       a.site href="http://melody.iing.tw"
         .site-logo.site-logo_melody
@@ -15,4 +15,4 @@
         .site-meta.site-subtitle light.iing.tw
   .footer-logo
 
-  .copy &copy; 2016 蔡英文競選辦公室
+  .copy &copy; 2016 蔡英文、陳建仁競選辦公室
