--- a/sass/page/policies-page/_typekit.sass
+++ b/sass/page/policies-page/_typekit.sass
@@ -1,5 +1,5 @@
 %tk-shs-extralight
-  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", "STHeitiTC-Light", "Microsoft JhengHei", sans-serif
+  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", sans-serif
   font-style: normal
   font-weight: 100
   +transition(opacity .5s .5s)
@@ -11,7 +11,7 @@
     opacity: 1
 
 %tk-shs-light
-  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", "STHeitiTC-Light", "Microsoft JhengHei", sans-serif
+  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", sans-serif
   font-style: normal
   font-weight: 200
   +transition(opacity .5s .5s)
@@ -23,7 +23,7 @@
     opacity: 1
 
 %tk-shs-regular
-  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", "STHeitiTC-Light", "Microsoft JhengHei", sans-serif
+  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", sans-serif
   font-style: normal
   font-weight: 400
   +transition(opacity .5s .5s)
@@ -35,7 +35,7 @@
     opacity: 1
 
 %tk-shs-bold
-  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", "STHeitiTC-Light", "Microsoft JhengHei", sans-serif
+  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", sans-serif
   font-style: normal
   font-weight: 600
   +transition(opacity .5s .5s)
@@ -47,7 +47,7 @@
     opacity: 1
 
 %tk-shs-heavy
-  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", "STHeitiTC-Light", "Microsoft JhengHei", sans-serif
+  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", sans-serif
   font-style: normal
   font-weight: 700
   +transition(opacity .5s .5s)
